freemed project changelog
($Id$)

* Fri Mar 30 2001 rufustfirefly
  Released 0.2.1 (Persephone/CVS)
  - committed old error checking patch in insurance billing module

* Mon Mar 26 2001 fforest
  - lib/API boxtop and boxbotton checks for incorrect calling sequence
  - index.php left in commented out test code for above
  - patient.php circumvent error caused by API change above
  - lib/freemed.php  add include for lib/API.php
  - mcsi_nsf_ci and mc needed DA1 record when submitting paper claims
    to MCSI. use psrein if available else physsn
  - provider.module fix loss of physsn after a mod. 
    fix link for Abandon to this->page_name

* Fri Mar 23 2001 rufustfirefly
  - payment_record.php -> old/payment_record.php
  - manage_payment_records.php -> old/manage_payment_records.php

* Fri Mar 23 2001 fforest
  - fixedform_EN.data update with new requirements for
    commercial and Medicare NSF record layouts
  - lib/render_forms add new function render_fixedRecord. This allows
    a single NSF record to be generate by record type so we don;t have to 
    generate an entire form. major performance boost for NSF generation
  - modules/mcsi_nsf_ci major updates. All commercial claim submissions now work.
  - modules/mcsi_nsf_mc major updates. Should be correct but still untested.

* Thu Mar 22 2001 rufustfirefly
  - frmlry.php3 -> old/frmlry.php3
  - lib/API.php: old help.php3 references moved to help.php
  - help.php: removed old lib/API.php redundant reference
  - lib/API.php: cleanups in freemed_display_box_top(), and checking in
    freemed_display_html_bottom() to see if the box has been closed
  - payment_record.php: trigger_error() handling for DIE("") breaks
  - admin.php: removed API.php include
  - modules/generate_forms.module.php: credit to Fred and trigger_error()
    implemented

* Wed Mar 21 2001 rufustfirefly
  - module_information.php: now fixed table width so things wrap properly
  - patient.php: semantic break in patient.php fixed