@@ -68,16 +68,19 @@ from jeff b (jeff@univrel.pr.uconn.edu)
 8) HUP apache (killall -1 httpd) to force it to reload its configuration
    files.
 
-9) Try to load http://localhost/freemed/ in your web browser. If no error
-   messages occur, login in as "root" with the password being your database
-   password. This will bring up a version of freemed that can be used to
-   setup the database structures, but little else. Go to the "Administration"
-   Menu, and select "Reinitialize Database". When prompted, check the
-   "First Initialization" checkbox, and then click the "Continue" button.
-   Due to a fairly dumb bug, you have to go back to the Admin menu, click
-   on "Reinitialize Database" *again*, but do not select "First Initialization"
-   then initialize the database again, which will create the proper tables and
-   information. You may now use freemed. Congratulations!
+9) Create the database with the command "mysqladmin -p create freemed"
+   (if you are using MySQL).
+
+10) Try to load http://localhost/freemed/ in your web browser. If no error
+    messages occur, login in as "root" with the password being your database
+    password. This will bring up a version of freemed that can be used to
+    setup the database structures, but little else. Go to the "Administration"
+    Menu, and select "Reinitialize Database". When prompted, check the
+    "First Initialization" checkbox, and then click the "Continue" button.
+    Due to a fairly dumb bug, you have to go back to the Admin menu, click
+    on "Reinitialize Database" *again*, but do not select "First Initialization"
+    then initialize the database again, which will create the proper tables and
+    information. You may now use freemed. Congratulations!
 
 ********************************************************* current coders/staff
 
